--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -45,16 +45,14 @@ jobs:
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v1
 
-      # Build the Docker image
-      - name: Build and Load Docker image
-        uses: docker/build-push-action@v2
-        with:
-          push: false
-          load: true
-          context: docker
-          file: docker/Dockerfile
-          tags: jhudsl/course_template
-          secrets: GIT_TOKEN=${{ secrets.GIT_TOKEN }}
+      # Build docker image
+      - name: Build Docker image
+        run: |
+          echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
+          /usr/bin/docker buildx build --tag jhudsl/course_template:latest  \
+          --cache-from type=local,src=/tmp/.buildx-cache  \
+          --cache-to type=local,dest=/tmp/.buildx-cache \
+          --file docker/Dockerfile docker
 
       # Run bookdown rendering
       - name: Run bookdown render
