--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -5,17 +5,24 @@ group:
   # Repositories to recieve changes
   repos: |
     jhudsl/ITCR_Documentation_and_Usability
+    jhudsl/ITCR_Cancer_Research_Leadership
+    jhudsl/ITCR_Data_Management
 #ADD NEW REPO HERE following the format above#
   # Files which should be updated
-  files:
-  - .github/workflows/render-bookdown.yml
-  - .github/workflows/style-and-sp-check.yml
-  - .github/workflows/url-checker.yml
-  - .github/workflows/ISSUE_TEMPLATES/issue_template.md
-  - .github/workflows/PULL_REQUEST_TEMPLATE.md
-  - docker/*
-  - scripts/*
-  - getting_started.md
+  - source: .github/workflows/docker-build-test.yml
+    dest: .github/workflows/docker-build-test.yml
+  - source: .github/workflows/style-and-sp-check.yml
+    dest: .github/workflows/style-and-sp-check.yml
+  - source: .github/workflows/url-checker.yml
+    dest: .github/workflows/url-checker.yml
+  - source: scripts/
+    dest: scripts/
+  - source: docker/
+    dest: docker/
+  - source: .gitignore
+    dest: .gitignore
+  - source: getting_started.md
+    dest: getting_started.md
 
 ###### TO ADD NEW REPOSITORY USE THIS FORMAT; Feel free to add/drop files that
 # you specifically would like synced (or not).
@@ -24,11 +31,13 @@ group:
 #  repos: |
 #    org/repo_name
 #  # Files which should be updated
-#  files:
-#  - .github/workflows/render-leanpub.yml
-#  - .github/workflows/sp-check.yml
-#  - .github/workflows/url-checker.yml
-#  - .github/workflows/ISSUE_TEMPLATES/issue_template.md
-#  - .github/workflows/PULL_REQUEST_TEMPLATE.md
-#  - scripts/*
-#  - getting_started.md
+#  - source: .github/workflows/
+  #   dest: .github/workflows/
+  # - source: scripts/
+  #   dest: scripts/
+  # - source: docker/
+  #   dest: docker/
+  # - source: .gitignore
+  #   dest: .gitignore
+  # - source: getting_started.md
+  #   dest: getting_started.md
