Fix changes/no_changes bit

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -345,6 +345,8 @@ jobs:
         id: commit
         run: |
           branch_name='preview-${{ github.event.pull_request.number }}'
+          git diff --name-only origin/main -- docs >/dev/null && changes=true || changes=false
+          echo ::set-output name=changes::$(echo $changes)
           git add . --force
           git commit -m 'Render preview' || echo "No changes to commit"
           git pull --set-upstream origin $branch_name --allow-unrelated-histories
@@ -388,8 +390,8 @@ jobs:
             _Updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
 
-      - name: comment if no changes
-        if: ${{ steps.commit.outputs.changes == 'no_changes' }}
+      - name: Comment if no changes
+        if: steps.commit.outputs.changes == 'no_changes'
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
