--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,6 +29,25 @@ jobs:
              docker/Dockerfile
              docker/github_package_list.tsv
 
+      - name: Configure git
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
+          branch_name='preview-${{ github.event.pull_request.number }}'
+          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
+          if [[ $exists == 0 ]];then
+            echo branch doesnt exist
+            git checkout -b $branch_name
+            git push --set-upstream origin $branch_name
+          else
+            echo branch does exist
+            git fetch --all
+            git checkout $branch_name
+            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
+          fi
+        shell: bash
+
     outputs:
       toggle_quiz_check: "${{ env.CHECK_QUIZZES }}"
       toggle_spell_check: "${{ env.STYLE_AND_SP_CHECK }}"
@@ -50,25 +69,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Configure git
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-            git fetch --all
-            git checkout $branch_name
-            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
-          fi
-        shell: bash
 
       - name: Run spell check
         id: spell_check_run
@@ -155,14 +155,6 @@ jobs:
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
 
     steps:
-    - name: checkout repo
-      uses: actions/checkout@v2
-
-    - name: Login as jhudsl-robot
-      run: |
-        git config --local user.email "itcrtrainingnetwork@gmail.com"
-        git config --local user.name "jhudsl-robot"
-
     - name: URLs-checker
       uses: urlstechie/urlchecker-action@master
       with:
@@ -193,25 +185,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Configure git
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-            git fetch --all
-            git checkout $branch_name
-            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
-          fi
-        shell: bash
 
       - name: Run quiz check
         id: quiz_check_run
@@ -299,32 +272,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Set up git checkout
-      - name: Set up git checkout
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-            git fetch --all
-            git checkout $branch_name
-            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
-          fi
-
-          rm -r docs/*
-        shell: bash
-
       # Run bookdown rendering
       - name: Run bookdown render
         id: bookdown
-        run: Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all')"
+        run: |
+          rm -r docs/*
+          Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all')"
 
       # Run Coursera version
       - name: Run Coursera version of render
@@ -407,22 +360,6 @@ jobs:
     if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes' && needs.yaml-check.outputs.dockerfiles_changed == 'true' && github.head_ref != 'repo-sync/OTTR_Template/default'}}
 
     steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
-
-      - name: Verify Dockerfiles changed?
-        uses: tj-actions/verify-changed-files@v8.8
-        id: verify-changed-files
-        with:
-          files: |
-             docker/Dockerfile
-             docker/github_package_list.tsv
-
-      - name: Login as jhudsl-robot
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
       # Set up Docker build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
