--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -85,6 +85,9 @@ jobs:
 
       - name: Commit spell check errors
         run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
           branch_name='preview-${{ github.event.pull_request.number }}'
           git add --force resources/spell_check_results.tsv
           git commit -m 'Add spell check file' || echo "No changes to commit"
@@ -297,6 +300,9 @@ jobs:
       - name: Commit rendered bookdown files to preview branch
         id: commit
         run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+          
           branch_name='preview-${{ github.event.pull_request.number }}'
           git add . --force
           git commit -m 'Render bookdown preview' || echo "No changes to commit"
