--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -215,14 +215,14 @@ jobs:
         force_pass: true
 
         # A path to a csv file to save results to
-        save: resources/url_checks.tsv
+        save: resources/url_checks.csv
 
     - name: Count URL errors
       id: url_errors
       run: |
         results=0
-        if [ -f resources/url_checks.tsv]; then
-          results=$(wc -l < /resources/url_checks.tsv >/dev/null)
+        if [ -f resources/url_checks.csv]; then
+          results=$(wc -l < /resources/url_checks.csv >/dev/null)
         fi
         echo ::set-output name=url_results::$results
 
