--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -178,7 +178,9 @@ jobs:
     needs: yaml-check
     runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
-
+    container:
+      image: jhudsl/course_template:main
+      
     steps:
     - name: checkout repo
       uses: actions/checkout@v2
