--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -211,7 +211,7 @@ jobs:
         # Choose whether to include file with no URLs in the prints.
         print_all: false
 
-        exclude_files: .github/PULL_REQUEST_TEMPLATE.md
+        exclude_files: .github/PULL_REQUEST_TEMPLATE.md, docs/*
 
         # A comma separated links to exclude during URL checks
         exclude_urls: https://jhudatascience.org/{Course_Name}}
