--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -178,21 +178,32 @@ jobs:
     needs: yaml-check
     runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
+    container:
+      image: jhudsl/course_template:main
 
     steps:
     - name: checkout repo
       uses: actions/checkout@v2
 
-    - name: Login as jhudsl-robot
+    - name: Configure git
       run: |
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
 
-    - name: URLs-checker
+        branch_name='preview-${{ github.event.pull_request.number }}'
+        git fetch --all
+        git checkout $branch_name
+        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
+      shell: bash
+
+    - name: URLs checker
       uses: urlstechie/urlchecker-action@master
       with:
-        # Delete the cloned repository after running URLchecked (default is false)
-        cleanup: true
+        # Specify a branch
+        branch: preview-${{ github.event.pull_request.number }}
+
+        # Cleanup
+        cleanup: false
 
         # A comma-separated list of file types to cover in the URL checks
         file_types: .Rmd,.md
@@ -200,11 +211,77 @@ jobs:
         # Choose whether to include file with no URLs in the prints.
         print_all: false
 
+        exclude_files: .github/PULL_REQUEST_TEMPLATE.md, docs/*
+
         # A comma separated links to exclude during URL checks
         exclude_urls: https://jhudatascience.org/{Course_Name}}
 
-        # choose if the force pass or not
-        force_pass : true
+        force_pass: true
+
+        # A path to a csv file to save results to
+        save: resources/url_checks.csv
+
+    - name: Count URL errors
+      id: url_errors
+      run: |
+        results=$(Rscript "scripts/url-check.R")
+        echo "::set-output name=url_results::$results"
+
+    - name: Commit URL check
+      run: |
+        branch_name='preview-${{ github.event.pull_request.number }}'
+        git add --force resources/url_checks.csv || echo "No changes to commit"
+        git commit -m 'Add URL check file' || echo "No changes to commit"
+        git fetch
+        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
+        git push --force origin $branch_name || echo "No changes to commit"
+
+    - name: Build components of the spell check comment
+      id: build-components
+      env:
+        GH_PAT: ${{ secrets.GH_PAT }}
+      run: |
+        branch_name='preview-${{ github.event.pull_request.number }}'
+        url_errors=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/url_checks.csv
+        echo ::set-output name=time::$(date +'%Y-%m-%d')
+        echo ::set-output name=commit_id::$GITHUB_SHA
+        echo ::set-output name=url_errors::$url_errors
+
+    # Handle the commenting
+    - name: Find Comment
+      uses: peter-evans/find-comment@v1
+      id: fc
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: broken URLs
+
+    - name: URL errors!
+      if: ${{ steps.url_errors.outputs.url_results > 0 }}
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          :warning: There are broken URLs that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/How-to-set-up-and-customize-GitHub-actions-robots#check-for-broken-urls).
+          [Download the errors here.](${{ steps.build-components.outputs.url_errors }})
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+        edit-mode: replace
+
+    - name: Check URL results - fail if too many errors
+      if: ${{ steps.url_errors.outputs.url_results > 0 }}
+      run: exit 1
+
+    - name: No URL errors
+      if: ${{ steps.url_errors.outputs.url_results == 0 }}
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          No broken URLs detected! :tada:
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+        edit-mode: replace
 
   check-quizzes:
     name: Check Leanpub quizzes
@@ -235,7 +312,7 @@ jobs:
         run: |
           Rscript -e "ottrpal::check_quizzes(quiz_dir = 'quizzes', write_report = TRUE, verbose = TRUE)"
           results=0
-          if -f "question_error_report.tsv"; then
+          if [ -f question_error_report.tsv ]; then
             results=$(wc -l < question_error_report.tsv >/dev/null)
           fi
           echo ::set-output name=quiz_chk_results::$results
